[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemigos/atacante/atacante 01.png" type="Texture" id=1]
[ext_resource path="res://Enemigos/atacante/atacante 03.png" type="Texture" id=2]
[ext_resource path="res://Enemigos/atacante/atacante 00.png" type="Texture" id=3]
[ext_resource path="res://Enemigos/atacante/atacante.gd" type="Script" id=4]
[ext_resource path="res://Enemigos/atacante/atacante 04.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 5 ) ],
"loop": true,
"name": "caminar",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 18.0
height = 8.0

[sub_resource type="CircleShape2D" id=3]
radius = 179.025

[node name="atacante" type="KinematicBody2D" groups=["da√±o_amigo"]]
collision_layer = 4
collision_mask = 7
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -3, 0 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 1 )
animation = "caminar"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 2 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
